# fast-gaussian-rasterization

./: .gitignore  license  pyproject.toml  readme.md  requirements.txt
.github/workflows/: publish.yml
fast_gauss/: __init__.py  console_utils.py  data_utils.py  egl_utils.py  gaussian_utils.py  gl_utils.py  gsplat_utils.py  math_utils.py  sh_utils.py
fast_gauss/shaders/: dsplat.frag  dsplat.geom  dsplat.vert  gsplat.frag  gsplat.geom  gsplat.vert
